MH3-98314: Add pic32mz-ef curiosity 2.0 support

--- a/boards/pic32mz_ef_curiosity.yml
+++ b/boards/pic32mz_ef_curiosity.yml
@@ -702,6 +702,7 @@ interfaces:
     options:
       - name: Virtual COM Port interface
         description: Serial Debug Console
+        dependencies: [[sys_console, uart6]]
         pinctrl:
           tx:
             pinId: RF2
