MH3-98314: Add pic32mz-ef curiosity 2.0 support

--- a/boards/pic32mz_ef_curiosity.yml
+++ b/boards/pic32mz_ef_curiosity.yml
@@ -228,9 +228,7 @@ interfaces:
           nirq:
             pinId: RJ2
             name: ETH_nIRQ
-            function: GPIO
-            direction: out
-            latch: high
+            function: INT4
       - name: Ethernet nRST interface
         description: Ethernet nRST configuration
         pinctrl:
