--- a/clickBoards/eeprom_3_click.yml
+++ b/clickBoards/eeprom_3_click.yml
@@ -6,6 +6,7 @@ description: >
 documentation: https://www.mikroe.com/eeprom-3-click
 compatible: mikrobus
 dependencies: [[drv_at24, i2c]]
+multiconnection: False
 supported:
   i2c:
     sda:
