--- a/clickBoards/pl460_ek_plc_g3macrt.yml
+++ b/clickBoards/pl460_ek_plc_g3macrt.yml
@@ -5,6 +5,7 @@ description: >
 documentation: https://www.microchip.com/en-us/development-tool/EV13L63A
 compatible: xplainpro
 dependencies: [[drvG3MacRt, spi]]
+multiconnection: False
 supported:
   adc plus:
     name: PL460_SUPPLY_MON
