MH3-105405: Allow external connections through ATMBUSADAPTER-XPRO. Added support to WINCS02 add-on board.

--- a/package.yml
+++ b/package.yml
@@ -3,7 +3,7 @@ package:
   name: "shd"
   type: "api"
   status: "production"
-  required: false
+  required: true
   version: "v1.0.0"
 
   dependencies:
